Fix encoding for multiple occurances of + Set text align to center

--- a/birthdays/css/styles.css
+++ b/birthdays/css/styles.css
@@ -35,6 +35,7 @@ h1 {
   margin: 0px;
   color: white;
   font-size: 3rem;
+  text-align: center;
 }
 
 p {
@@ -42,4 +43,5 @@ p {
   margin: 0px;
   color: white;
   font-size: 2rem;
+  text-align: center;
 }
